TextInputClient::InsertChar call after IME handled should use a purely faked key event.

Currently the fake key event is constructed from the native key event, which carries flags.
Therefore, InsertChar can be refused by TextInputClient, for example, when flags has ALT_DOWN.

Bug: 835699
Change-Id: If29f61d18226091680ca3c900827fc3872b8b59d
Reviewed-on: https://chromium-review.googlesource.com/1126752
Reviewed-by: James Su <suzhe@chromium.org>
Commit-Queue: Shu Chen <shuchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572742}
Former-commit-id: c1bd75f2cab8d8d689f9effacbf88e4a2866f667